fix: Make the solution visible

--- a/src/Grid/Grid.module.css
+++ b/src/Grid/Grid.module.css
@@ -21,15 +21,17 @@
       background-color: transparent;
       transition: border-color 0.25s;
     }
+
+    .solution {
+      background-color: rgba(
+        from var(--solution-color) r g b / var(--intensity)
+      );
+    }
   }
 
   .letter {
     border: 4px solid transparent;
     --intensity: 0;
-  }
-
-  .solution {
-    background-color: rgba(from var(--solution-color) r g b / var(--intensity));
   }
 
   .building {
